--- a/styles/style.css
+++ b/styles/style.css
@@ -15,5 +15,11 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
+
+}
+
+.banner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
